public/errors/64
main.c: In function ‘main’:
main.c:2:3: error: ‘A’ undeclared (first use in this function)
   A = 1
   ^
main.c:2:3: note: each undeclared identifier is reported only once for each function it appears in
main.c:3:1: error: expected ‘;’ before ‘}’ token
 }
 ^
